--- a/test/fixtures/iterations.yml
+++ b/test/fixtures/iterations.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  iteration_number: MyString
+  drop_number: MyString
+  date_of_drop: 2017-10-11
+
+two:
+  iteration_number: MyString
+  drop_number: MyString
+  date_of_drop: 2017-10-11
